[package]
name = "rust-mart-tutorial"
version = "0.1.0"
authors = ["giacomoratta"]
edition = "2018"
description = "RustMart example"
repository = "https://github.com/giacomoratta/rust-mart-tutorial"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
